--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,30 +1,127 @@
+# MoltBot Guardian Pre-commit Hooks
+# Security-focused hooks to prevent leaks and vulnerabilities
+
 repos:
-  # Python security - Bandit
-  - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.7
-    hooks:
-      - id: bandit
-        args: ["-r", "dashboard/", "-ll", "-ii"]
-        exclude: "test_|venv/"
+  # =============================================================================
+  # SECRETS DETECTION - Prevent passwords, API keys, tokens from being committed
+  # =============================================================================
 
-  # Python dependency vulnerabilities
-  - repo: https://github.com/pypa/pip-audit
-    rev: v2.7.1
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.21.2
     hooks:
-      - id: pip-audit
-        args: ["--requirement", "dashboard/requirements.txt"]
+      - id: gitleaks
+        name: "🔐 Gitleaks - Detect secrets"
+        description: "Scan for hardcoded secrets, passwords, API keys"
 
-  # Secrets detection
   - repo: https://github.com/Yelp/detect-secrets
-    rev: v1.4.0
+    rev: v1.5.0
     hooks:
       - id: detect-secrets
-        args: ["--baseline", ".secrets.baseline"]
-        exclude: "package-lock.json|venv/"
+        name: "🕵️ Detect-secrets - Find high entropy strings"
+        args: ['--baseline', '.secrets.baseline']
+        exclude: package-lock.json
 
-  # General security patterns
-  - repo: https://github.com/returntocorp/semgrep
-    rev: v1.52.0
+  # =============================================================================
+  # PYTHON SECURITY SCANNING
+  # =============================================================================
+
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.8.3
     hooks:
-      - id: semgrep
-        args: ["--config", "auto", "--error", "--exclude", "venv", "--exclude", "node_modules"]
+      - id: bandit
+        name: "🐍 Bandit - Python security linter"
+        args: ["-r", "dashboard/", "-ll", "-ii", "--exclude", "*/test_*"]
+        files: \.py$
+
+  # Safety check as local hook (pyupio/safety repo doesn't have pre-commit hooks)
+  - repo: local
+    hooks:
+      - id: safety-check
+        name: "🛡️ Safety - Check Python dependencies"
+        entry: bash -c 'pip3 install -q safety && safety check -r requirements.txt --full-report || true'
+        language: system
+        files: requirements\.txt$
+        pass_filenames: false
+
+  # =============================================================================
+  # GENERAL CODE QUALITY
+  # =============================================================================
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
+    hooks:
+      - id: check-added-large-files
+        name: "📦 Check large files"
+        args: ['--maxkb=1000']
+
+      - id: check-case-conflict
+        name: "📁 Check case conflicts"
+
+      - id: check-merge-conflict
+        name: "🔀 Check merge conflicts"
+
+      - id: check-yaml
+        name: "📄 Check YAML syntax"
+        exclude: ^\.github/
+
+      - id: check-json
+        name: "📄 Check JSON syntax"
+
+      - id: detect-private-key
+        name: "🔑 Detect private keys"
+
+      - id: end-of-file-fixer
+        name: "📝 Fix end of file"
+
+      - id: trailing-whitespace
+        name: "🧹 Trim trailing whitespace"
+
+      - id: no-commit-to-branch
+        name: "🚫 Prevent direct commits to main"
+        args: ['--branch', 'main', '--branch', 'master']
+
+  # =============================================================================
+  # JAVASCRIPT/NODE SECURITY
+  # =============================================================================
+
+  - repo: local
+    hooks:
+      - id: npm-audit
+        name: "📦 NPM Audit - JS vulnerabilities"
+        entry: bash -c 'cd dashboard-ui && npm audit --audit-level=high || true'
+        language: system
+        files: package\.json$
+        pass_filenames: false
+
+  # =============================================================================
+  # DOCKERFILE SECURITY
+  # =============================================================================
+
+  - repo: https://github.com/hadolint/hadolint
+    rev: v2.13.1-beta
+    hooks:
+      - id: hadolint-docker
+        name: "🐳 Hadolint - Dockerfile linter"
+        args: ["--ignore", "DL3008", "--ignore", "DL3013"]
+
+  # =============================================================================
+  # CUSTOM SECURITY CHECKS
+  # =============================================================================
+
+  - repo: local
+    hooks:
+      - id: no-hardcoded-ips
+        name: "🌐 Check for hardcoded IPs"
+        entry: bash -c 'grep -rn --include="*.py" --include="*.js" --include="*.jsx" "([0-9]{1,3}\.){3}[0-9]{1,3}" --exclude-dir=node_modules --exclude-dir=venv --exclude-dir=dist . | grep -v "127.0.0.1" | grep -v "0.0.0.0" | grep -v "localhost" && exit 1 || exit 0'
+        language: system
+        pass_filenames: false
+
+      - id: no-console-logs
+        name: "🖨️ Check for console.log in production"
+        entry: bash -c 'grep -rn "console\.log" dashboard-ui/src/ --include="*.jsx" --include="*.js" | grep -v "// ok" && exit 1 || exit 0'
+        language: system
+        pass_filenames: false
+
+# Global settings
+default_stages: [pre-commit]
+fail_fast: false
